--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
 body {
+    padding: 12px;
+}
+
+.calculator {
     width: 320px;
 }
 
 .keypad-btn {
     width: 80px;
     height: 80px;
+    font-size: 1.5em;
+    font-style: bold;
 }
 
 .keypad-row {
@@ -13,11 +19,14 @@ body {
 }
 
 .output-text {
-    margin-left: 12px;
+    padding-left: 24px;
 }
 
 #output-box {
-    width: 360px;
+    width: 100%;
+    height: 72px;
     margin-top: 8px;
+    text-color: black;
+    font-size: 32px;
     text-align: right;
 }
