--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     height: 80px;
     font-size: 1.5em;
     font-style: bold;
+    background: lightgray;
 }
 
 .keypad-row {
@@ -20,6 +21,7 @@ body {
 
 .output-text {
     padding-left: 24px;
+    margin-bottom: 4px;
 }
 
 #output-box {
